--- a/MauiAppHotel/views/hospedagemContratada.xaml
+++ b/MauiAppHotel/views/hospedagemContratada.xaml
@@ -2,11 +2,48 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MauiAppHotel.views.hospedagemContratada"
-             Title="hospedagemContratada">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
+             NavigationPage.HasNavigationBar="False"
+             BackgroundColor="{StaticResource Gray100}">
+    <VerticalStackLayout VerticalOptions="CenterAndExpand">
+        <Label Text="Suite super luxo"
+               TextColor="{StaticResource Primary}"
+               FontFamily="Kalam"
+               FontSize="50"
+               HorizontalTextAlignment="Center"/>
+
+        <Frame Margin="10">
+            <HorizontalStackLayout HorizontalOptions="Center" Spacing="10">
+                <HorizontalStackLayout>
+                    <Label Text="Adultos: "/>
+                    <Label Text="0" TextColor="{StaticResource Primary}"/>
+                </HorizontalStackLayout>
+
+                <HorizontalStackLayout>
+                    <Label Text="Crianças: "/>
+                    <Label Text="0" TextColor="{StaticResource Primary}"/>
+                </HorizontalStackLayout>
+            </HorizontalStackLayout>
+        </Frame>
+
+        <Frame Margin="10">
+            <Grid ColumnDefinitions="*, *, *" RowDefinitions="Auto, Auto">
+                <Label Text="Chek-in" Grid.Row="0" Grid.Column="0"/>
+                <Label Text="Chek-out" Grid.Row="0" Grid.Column="1"/>
+                <Label Text="Estadia" Grid.Row="0" Grid.Column="2"/>
+
+                <Label Text="27/05/2024" Grid.Row="1" Grid.Column="0"/>
+                <Label Text="27/06/2025" Grid.Row="1" Grid.Column="1"/>
+                <Label Text="3" Grid.Row="1" Grid.Column="2"/>
+            </Grid>
+        </Frame>
+
+        <Frame Margin="10">
+            <HorizontalStackLayout>
+                <Label Text="Valor Total: "/>
+                <Label Text="0" TextColor="{StaticResource Primary}"/>
+            </HorizontalStackLayout>
+        </Frame>
+
+        <Button Text="Voltar" HorizontalOptions="Center" Clicked="Button_Clicked"/>
     </VerticalStackLayout>
 </ContentPage>
